Inclusao de novos campos de login e senha

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">LoginApplication</string>
+    <string name="app_login">Login</string>
+    <string name="app_senha">Senha</string>
 </resources>
