--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">LoginApplication</string>
     <string name="app_login">Login</string>
-    <string name="app_senha">Senha</string>
+    <string name="app_senha">Password</string>
+    <string name="app_btnEntrar">Enter</string>
 </resources>
