--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_login">Login</string>
     <string name="app_senha">Password</string>
     <string name="app_btnEntrar">Enter</string>
+    <string name="app_msgLogin">Login efetuado com sucesso</string>
 </resources>
